# parser_vacancies

./: README.md  pyproject.toml
main/: main.py
src/: class_API.py  class_json.py  class_vacancy.py  print_json.py  request_funcs.py
